[gd_scene load_steps=3 format=2]

[ext_resource path="res://JSONParser.gd" type="Script" id=1]
[ext_resource path="res://Dialogue.gd" type="Script" id=2]

[node name="Dialogue" type="Control"]
anchor_right = 1.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 160.0
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer"]
margin_right = 954.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 954.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "My text is suppose to show up here."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 954.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="Option1" type="ColorRect" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 234.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0, 0, 1 )

[node name="Button" type="Button" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="ColorRect" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 474.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 1, 1, 1 )

[node name="Button" type="Button" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option3" type="ColorRect" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 714.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 1, 0, 1 )

[node name="Button" type="Button" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 3"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option4" type="ColorRect" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 954.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 0, 1 )

[node name="Button" type="Button" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Option 4"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JSONParser" type="Node" parent="."]
script = ExtResource( 1 )
file_name = "dialogue.json"
[connection signal="pressed" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option1/Button" to="." method="_on_Option1_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option2/Button" to="." method="_on_Option2_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option3/Button" to="." method="_on_Option3_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Option4/Button" to="." method="_on_Option4_Button_pressed"]
